NTR - corrected spacing for extension logo in buy modal

--- a/src/Resources/app/administration/src/module/sw-extension-store/component/sw-extension-buy-modal/sw-extension-buy-modal.scss
+++ b/src/Resources/app/administration/src/module/sw-extension-store/component/sw-extension-buy-modal/sw-extension-buy-modal.scss
@@ -39,7 +39,7 @@ $padding-summary-card: 22px;
 
     .sw-extension-buy-modal__extension-summary {
         display: grid;
-        grid-template-columns: 64px 1fr;
+        grid-template-columns: 72px 1fr;
         grid-column-gap: 12px;
         align-items: center;
         margin-bottom: 24px;
